Fixing tabs border bottom alignment

--- a/assets/src/sass/content/_search-results.scss
+++ b/assets/src/sass/content/_search-results.scss
@@ -3,7 +3,7 @@
 	&__tabs {
 		border-bottom: 1px solid #ccc;
 		margin-bottom: 2rem !important;
-		padding-bottom: 0.35rem !important;
+		padding-bottom: 6px !important;
 		padding-top: 2rem !important;
 
 		a {
